just fixed some errors while jumping back and forth from retro to master branch

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -74,7 +74,6 @@ MAIN
 .right-content img {
     float: right;
     margin-right: 10vw;
-    margin-left: 10vw;
     margin-top: 12vh;
     width: 30vw;
     height: 30vw;
